--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/userService
@@ -11,5 +14,15 @@ spring:
     user:
       name: root
       password: root
-server:
-  port: 8081
+  application:
+    name: USER-SERVICE
+
+
+eureka:
+  instances:
+    prefer-ip-address: true
+  client:
+    fetch-registry : true
+    register-with-eureka: true
+    service-url :
+      defaultZone : http://localhost:8761/eureka
